Deployment pipeline: commit stage

--- a/build.gradle
+++ b/build.gradle
@@ -47,3 +47,9 @@ configurations {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootBuildImage {
+    imageName = "${project.name}"
+    environment = ["BP_JVM_VERSION" : "17.*"]
+}
+
