--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,20 @@ spring:
     username: user
     password: password
     connection-timeout: 5s
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+  endpoint:
+    health:
+      show-components: ALWAYS
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include:
+            - readinessState
+            - rabbitmq
