--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ management:
       exposure:
         include:
           - health
+          - prometheus
   endpoint:
     health:
       show-components: ALWAYS
@@ -36,3 +37,6 @@ management:
           include:
             - readinessState
             - rabbit
+  metrics:
+    tags:
+      application: ${spring.application.name}
